2000-04-30  Radek Doulik  <rodo@helixcode.com>

	* htmlsettings.c (html_settings_free_colors): free colors only
	when they've been allocated

	* gtkhtml.c (gtk_html_set_default_background_color): set bgcolor
	in default settings

	* htmlpainter.c (html_painter_draw_background): added const to
	color arg

	* htmlengine.h: removed bgColor and bgColor_allocated

	* gtkhtml.c (gtk_html_set_default_background_color): use new settings

	* htmlengine-edit-insert.c (html_engine_insert_link): use new settings

	* htmlsettings.c (html_settings_reset): new function used to reset
	values (now only collors) from orig settings

	* htmlengine.c (parse_b): update to new settings
	(parse_b): added alink color parsing
	(html_engine_parse): updated for new settings
	(html_engine_draw_background): likewise
	(html_engine_queue_clear): likewise

	* htmlsettings.c (html_settings_set_color): new function for color setting
	(html_settings_get_color): get color (possibly unallocated)
	(html_settings_get_color_allocated): get allocated color
	(html_settings_free_colors): free colors scheduled to be freed and
	possibly also other colors

	* htmlsettings.h: added alink and text color

2000-04-29  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlengine-edit-insert.c
	(do_undo): Undelete `num_chars' character, not just one, you
	doofus.

2000-04-29  Radek Doulik  <rodo@helixcode.com>

	* htmllinktextmaster.c (html_link_text_master_set_url): new setting function 

	* htmltext.c (html_text_set_text): new setting function

2000-04-28  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlengine-edit-delete.c
	(delete_different_parent): `html_object_dup()' before adding to
	the buffer.

	* htmlengine-edit-fontstyle.c: Redone, with undo/redo support.

2000-04-28  Radek Doulik  <rodo@helixcode.com>

	* htmlimage.c (html_image_set_spacing): set hspace, vspace,
	updated to schedule update
	(html_image_set_filename): set filename, if changed, uregister
	current image_ptr and register new one